--- a/firebase/functions/package.json
+++ b/firebase/functions/package.json
@@ -13,6 +13,7 @@
   "main": "lib/index.js",
   "dependencies": {
     "@google/genai": "^1.34.0",
+    "dotenv": "^17.2.3",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^4.3.0"
   },
